--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    <title>Bonne fête Sofiya!</title>
+    <title>Bonne fête Sofiya! par Eduard</title>
   </head>
   <body>
     <script src="main.js"></script>
